--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-github-calendar": "^3.3.4",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.0",
